--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mongoose": "^8.9.2",
     "nodemailer": "^6.9.13"
   }
 }
